Remove filters (#822)
* Remove filters from FE

* Remove filters from tracing

* Use LinkedHashMap to keep order

* Remove IColumnFilter

* Fix checkstyle

* Update version

* clean code

* Rename FilterExpressionToFilters to QueryFilter